2005-01-27 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Rewrite the base 256 to base 10 conversion, using string operation only.
	 This allos us to get rid of the problematic 64bits integer type (does not
	 alwyas exist on target platform).

2005-01-27 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * Add construct and destructor to class gdcm::Debug to close the debug file
          automatically
   * Don't let uset to open twice the same file
   * gdcm has now an official UID prefix,
          supplied by http://www.medicalconnections.co.uk
          1.2.826.0.1.3680043.2.1143
          (Thx to Mathieu for providing URL)
   * Add a forty-entries private Dicom Dictionary (Philips MR Intera)
         to be able to perform some more tests
   * gdcm::ContentEntry : Contructors and Destructor are now protected,
         in order to be sure no user will try to use them.
         (at user level, only the children classes are meaningfull)

2005-01-26 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * move RLEInfo & JPEGInfo from Document to File

2005-01-26 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * FIX : remove so many friend between classes

2005-01-25 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocEntrySet.cxx : Bug fix when getting the value
   * src/gdcmContentEntry.[h|cxx], gdcmValEntry.cxx : amelioration of code

2005-01-25 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   In order to avoid missbehaviour :
   . gdcm::DocEntry is now specialized in
     - gdcm::SeqEntry (Dicom Sequence) as opposed to :
     - gdcm::ContentEntry (Dicom entry with a 'content')
   . gdcm::ContentEntry is specialized in
     - gdcm::ValEntry (Dicom entry with a std::string representable value, i.e.
       characters value, or integers)
     - gdcm::BinEntry (Dicom entry with a non strig representable value
   (user hasn't any longer to thing about the precedence of his dynamic_casts)
